--- a/views/cards/show30shuffle.ejs
+++ b/views/cards/show30shuffle.ejs
@@ -45,7 +45,7 @@
     <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;" id="card-nav">
       <div class="container">
         <ul class="navbar-nav">
-          <li><a href="/category/<%= category.name %>" class="back-link"><i
+          <li><a href="/category/<%= category._id %>" class="back-link"><i
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
             <p class="m-0"><small id="categoryId" name="<%= category._id %>">
