--- a/views/index.ejs
+++ b/views/index.ejs
@@ -391,7 +391,7 @@
               <div class="row">
                 <% categories.forEach(cat => { %>
                 <div class="col-lg-3 col-md-4 col-6 mb-4">
-                  <a href="/category/<%= cat.name %>" class="landing-link">
+                  <a href="/category/<%= cat._id %>" class="landing-link">
                     <div class="card">
                       <div class="d-flex justify-content-center">
                         <div
@@ -417,7 +417,7 @@
                             >
                           </p>
                           <a
-                            href="/category/<%= cat.name %>"
+                            href="/category/<%= cat._id %>"
                             class="btn btn-sm btn-danger"
                             ><%= texts.landingPage.study %></a
                           >
