partly removed errors connected to categoryId logic

--- a/views/cards/show30.ejs
+++ b/views/cards/show30.ejs
@@ -45,7 +45,7 @@
     <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;" id="card-nav">
       <div class="container">
         <ul class="navbar-nav">
-          <li><a href="/category/<%= section.category %>" class="back-link"><i
+          <li><a href="/category/<%= section.categoryId %>" class="back-link"><i
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
             <p class="m-0"><small id="sectionId" name="<%= section._id %>">
