--- a/views/category.ejs
+++ b/views/category.ejs
@@ -371,7 +371,7 @@
                             <div class="col-12">
                                 <div class="alert alert-warning d-flex justify-content-between align-items-center" role="alert">
                                     <p class="mb-0">Balíček byl vygenerován AI</p>
-                                    <% if(currentUser.email === section.author.email || currentUser.isFacultyAdmin){ %>
+                                    <% if(currentUser.email === section.author?.email || currentUser.isAdmin){ %>
                                         <a href="/review/<%= section._id %>/showAll" class="btn btn-sm btn-success mx-2">Zkontrolovat obsah</a>
                                     <% } %>
                                 </div>
@@ -383,7 +383,7 @@
                             <div class="col-12">
                                 <div class="alert alert-warning d-flex justify-content-between align-items-center" role="alert">
                                     <p class="mb-0">Balíček není zveřejněn pro studenty</p>
-                                    <% if(currentUser.email === section.author.email || currentUser.isFacultyAdmin){ %>
+                                    <% if(currentUser.email === section.author?.email || currentUser.isAdmin){ %>
                                         <a href="/review/<%= section._id %>/publish" class="btn btn-success mx-2">Zveřejnit</a>
                                     <% } %>
                                 </div>
@@ -395,7 +395,7 @@
                             <div class="col-12">
                                 <div class="alert alert-warning d-flex justify-content-between align-items-center" role="alert">
                                     <p class="mb-0">Testové otázky nejsou zveřejněny pro studenty</p>
-                                    <% if(currentUser.email === section.author.email || currentUser.isFacultyAdmin){ %>
+                                    <% if(currentUser?.email === section.author.email || currentUser.isAdmin){ %>
                                         <a href="/category/<%= category._id %>/section/<%= section._id %>/publishTest"" class="btn btn-sm btn-success mx-2">Zveřejnit</a>
                                     <% } %>
                                 </div>
@@ -441,7 +441,6 @@
 
                     <% if (currentUser && currentUser.isEditor) { %>
                         <div class="row mb-2 mt2 mx-3 d-flex">
-                            <a href="/category/<%= category._id %>/section/<%= section._id %>/unpublish" class="btn btn-sm btn-outline-danger my-1"><i class="fas fa-eye-slash"></i> Skrýt balíček</a>
                             <a href="#" class="btn btn-sm btn-danger btn-red my-1" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="far fa-trash-alt"></i> Odstranit balíček</a>
                         </div>
                     <% } %>
