--- a/views/questions/finished.ejs
+++ b/views/questions/finished.ejs
@@ -160,7 +160,7 @@
         <% } %>
         <div class="row mt-3">
           <div class="col-12">
-            <a href="/category/<%= section.category %>">zpět na předmět</a>
+            <a href="/category/<%= section.categoryId %>">zpět na předmět</a>
           </div>
         </div>
       </div>
