--- a/views/questions/show.ejs
+++ b/views/questions/show.ejs
@@ -45,10 +45,10 @@
     <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;" id="card-nav">
       <div class="container">
         <ul class="navbar-nav">
-          <li><a href="/category/<%= section.category %>" class="back-link"><i
+          <li><a href="/category/<%= section.categoryId %>" class="back-link"><i
                 class="fas fa-chevron-left me-2 mb-2"></i>Zpět na předmět</a></li>
           <li>
-            <p class="m-0"><small id="sectionId" name="<%= section._id %>" cat="<%= section.category %>">
+            <p class="m-0"><small id="sectionId" name="<%= section._id %>" cat="<%= section.categoryId %>">
               <span class="nezobrazovat-na-mobilu d-flex align-items-center">
                 <span><%= section.name %></span>
                 <% if (section.isPremium) { %>
