--- a/views/review/showAll.ejs
+++ b/views/review/showAll.ejs
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="offset-1 col-10 d-flex justify-content-between mb-4">
-          <a href="/category/<%= section.category %>" class="btn btn-outline-danger d-flex justify-content-center align-items-center px-3"><i class="fas fa-arrow-left"></i></a>
+          <a href="/category/<%= section.categoryId %>" class="btn btn-outline-danger d-flex justify-content-center align-items-center px-3"><i class="fas fa-arrow-left"></i></a>
           <div></div>
       </div>
   </div>
@@ -17,7 +17,7 @@
   <div class="row mt-4 mb-3">
     <div class="offset-sm-1 col-sm-5 d-flex flex-column justify-content-between align-items-center">
       <h4 class="mb-2">Kartičky</h4>
-      <a href="/category/<%= section.category %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-outline-danger">Přidat kartičku</a>
+      <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-outline-danger">Přidat kartičku</a>
     </div>  
     <div class="col-sm-5 d-flex flex-column justify-content-center align-items-center">
       <h4 class="mb-2">Otázky</h4>
@@ -155,7 +155,7 @@
             <p>Generování testových otázek prostřednictvím umělé inteligence je možné pouze pokud balíček obsahuje <b>opakovací kartičky</b>.</p><p> Tyto kartičky slouží jako podklad, na základě kterého jsou následně testové otázky generovány.</p>
             <p>Chcete-li otázky vygenerovat, <b>vytvořte</b> v tomto balíčku opakovací kartičky.</p>
             <div class="d-flex justify-content-center">
-                <a href="/category/<%= section.category %>/section/<%= section._id %>/newCard" class="btn btn-danger mt-3 mx-2 mb-2">Vytvořit kartičky</a>
+                <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-danger mt-3 mx-2 mb-2">Vytvořit kartičky</a>
             </div>
         </div>
     </div>
