--- a/views/sections/edit.ejs
+++ b/views/sections/edit.ejs
@@ -1,8 +1,8 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
     <div class="col-lg-6 offset-lg-3">
         <h4 class="text-center">Upravit balíček</h4> 
-        <p class="text-center"><%= section.name %> <span class="text-muted">(<%= section.category %>)</span></p>
-        <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= section.category %>/editSection/<%=section._id%>?_method=PUT" method="POST">
+        <p class="text-center"><%= section.name %> <span class="text-muted">(<%= section.categoryId %>)</span></p>
+        <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= section.categoryId %>/editSection/<%=section._id%>?_method=PUT" method="POST">
             <div class="mt-2">
                 <label for="name" class="form-label text-bold">Nadpis</label>
                 <input type="text" name="name" id="name" class="form-control form-borders" value="<%= section.name %>" required></input>
@@ -16,7 +16,7 @@
             </div>
             <div class="col-12">
                 <button class="btn btn-danger btn-sm" type="submit">Uložit</button>
-                <a href="/category/<%= section.category %>" class="btn btn-outline-danger btn-sm" type="submit">Zpět na předmět</a>
+                <a href="/category/<%= section.categoryId %>" class="btn btn-outline-danger btn-sm" type="submit">Zpět na předmět</a>
             </div>
         </form>
     </div>
