--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,339 +1,338 @@
-
-
 body {
-    font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 .main-header {
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_cover5.jpeg) no-repeat center center; 
-    background-size: cover;
-    min-height: 450px;
-    color: white;
-    background-blend-mode: darken;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/bg_cover5.jpeg) no-repeat center center;
+  background-size: cover;
+  min-height: 450px;
+  color: white;
+  background-blend-mode: darken;
 }
 
 .about-header {
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_cover5.jpeg) no-repeat center center; 
-    background-size: cover;
-    min-height: 350px;
-    color: white;
-    background-blend-mode: darken;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/bg_cover5.jpeg) no-repeat center center;
+  background-size: cover;
+  min-height: 350px;
+  color: white;
+  background-blend-mode: darken;
 }
 
 .call-to-action {
-    zoom: 130%;
-    opacity: 0;
+  zoom: 130%;
+  opacity: 0;
 }
 
 .width-20 {
-    width: 20%;
+  width: 20%;
 }
 
 .jumbotron-heading {
-    font-size: 8vh;
-    opacity: 0;
+  font-size: 8vh;
+  opacity: 0;
 }
 
 .lead {
-    opacity: 0;
+  opacity: 0;
 }
 
 .vision-statement {
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_login.jpeg) no-repeat center center; 
-    background-size: cover;
-    color: white;
-    background-blend-mode: darken;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../img/bg_login.jpeg) no-repeat center center;
+  background-size: cover;
+  color: white;
+  background-blend-mode: darken;
 }
 
 .card-info {
-    background: linear-gradient(135deg, rgb(221, 195, 127), rgb(245, 235, 200));
-    /* Optional: To ensure backward compatibility */
-    background-color: rgb(221, 195, 127); /* Fallback for older browsers */
+  background: linear-gradient(135deg, rgb(221, 195, 127), rgb(245, 235, 200));
+  /* Optional: To ensure backward compatibility */
+  background-color: rgb(221, 195, 127); /* Fallback for older browsers */
 }
 
 /*STREAK BOX*/
 .streak-box {
-    background-color: white;
-    min-height: 40%;
-    min-width: 40%;
-    border-radius: 0.25rem;
-    border: 1px solid #dfdfdf;
-    padding: 1rem;
-    padding-bottom: 0;
-    color: #212529;
+  background-color: white;
+  min-height: 40%;
+  min-width: 40%;
+  border-radius: 0.25rem;
+  border: 1px solid #dfdfdf;
+  padding: 1rem;
+  padding-bottom: 0;
+  color: #212529;
 }
 
 .streak-box .header {
-    text-align: center;
-    font-weight: 600;
-    font-size: 1.2rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .streak-box .info-icon {
-    background-color: #dfdfdf;
-    width: 16px;
-    height: 16px;
-    font-size: 12px;
-    font-weight: 600;
-    border-radius: 50px;
-    color: black;
+  background-color: #dfdfdf;
+  width: 16px;
+  height: 16px;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 50px;
+  color: black;
 }
 
 .streak-box .stats-list {
-    list-style: none;
-    padding-left: 0;
+  list-style: none;
+  padding-left: 0;
 }
 
 .streak-box .stats-item {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .streak-card {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #ffffff;
-    margin: 0 20px;
-    width: 180px;
-    height: 170px;
-  }
-  
-  .streak-card .percent {
-    position: relative;
-  }
-  
-  .streak-card svg {
-    position: relative;
-    width: 160px;
-    height: 160px;
-    transform: rotate(-90deg);
-  }
-  
-  .streak-card svg circle {
-    width: 100%;
-    height: 100%;
-    fill: none;
-    stroke: #f0f0f0;
-    stroke-width: 10;
-    stroke-linecap: round;
-  }
-  
-  .streak-card svg circle:last-of-type {
-    stroke-dasharray: 375px;
-    stroke-dashoffset: calc(375px - (375px * var(--percent)) / 100);
-    stroke: #3498db; 
-  }
-  
-  .streak-card .number {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .streak-card .number h3 {
-    font-weight: 200;
-    font-size: 1.5rem;
-  }
-  
-  .streak-card .number h3 span {
-    font-size: 1.5rem;
-  }
-  
-  .streak-card .title h2 {
-    margin: 25px 0 0;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #ffffff;
+  margin: 0 20px;
+  width: 180px;
+  height: 170px;
+}
 
-  .streak-card:nth-child(2) svg circle:last-of-type {
-    stroke: #E80F88;
-  }
+.streak-card .percent {
+  position: relative;
+}
+
+.streak-card svg {
+  position: relative;
+  width: 160px;
+  height: 160px;
+  transform: rotate(-90deg);
+}
+
+.streak-card svg circle {
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke: #f0f0f0;
+  stroke-width: 10;
+  stroke-linecap: round;
+}
+
+.streak-card svg circle:last-of-type {
+  stroke-dasharray: 375px;
+  stroke-dashoffset: calc(375px - (375px * var(--percent)) / 100);
+  stroke: #3498db;
+}
+
+.streak-card .number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.streak-card .number h3 {
+  font-weight: 200;
+  font-size: 1.5rem;
+}
+
+.streak-card .number h3 span {
+  font-size: 1.5rem;
+}
+
+.streak-card .title h2 {
+  margin: 25px 0 0;
+}
+
+.streak-card:nth-child(2) svg circle:last-of-type {
+  stroke: #e80f88;
+}
 
 .landing-img {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 .info-icon {
-    max-width: 90px;
-    max-height: 90px;
-    text-align: center;
+  max-width: 90px;
+  max-height: 90px;
+  text-align: center;
 }
 
 .img-fit {
-    max-width:60%;
-    max-height:60%;
+  max-width: 60%;
+  max-height: 60%;
 }
 
 .img-fit-100 {
-    max-width:100%;
-    max-height:100%;
-    padding: 10px;
-    padding-top: 0px;
-    padding-right: 15px;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 10px;
+  padding-top: 0px;
+  padding-right: 15px;
 }
 
 .img-fit-profile {
-    max-width:100%;
-    max-height:100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .img-fit-small {
-    max-width:100%;
-    max-height:100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-
-
-.card:hover .landing-img { 
-    transition: 0.5s;
-    filter: grayscale(0%);
-    opacity: 1; 
+.card:hover .landing-img {
+  transition: 0.5s;
+  filter: grayscale(0%);
+  opacity: 1;
 }
 
 .cat-text {
-    text-align: center;
+  text-align: center;
 }
 
 .cat-text h5 {
-    font-size: 1.0rem;
-    color: #212529;
-    text-decoration: none;
+  font-size: 1rem;
+  color: #212529;
+  text-decoration: none;
 }
 
 .landing-link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .card {
-    height: 100%;
+  height: 100%;
 }
 
 /* Alerts */
 .alert {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* INFO CARDS */
 .landing-info-wrapper {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
 }
 .landing-info {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .landing-info p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .landing-info .info-main {
-    color: #E80F88;
-    font-weight: bolder;
-    font-size: 1.2rem;
+  color: #e80f88;
+  font-weight: bolder;
+  font-size: 1.2rem;
 }
 
 .color-2 {
-    color: #4C0033;
+  color: #4c0033;
 }
 
 .d-none-992-down {
-    display:none;
+  display: none;
 }
 
 .icon-background-landing {
-    background-color: #EEEEEE;
-    height: 7rem;
-    width: 7rem;
+  background-color: #eeeeee;
+  height: 7rem;
+  width: 7rem;
 }
 
 /*PROC INLEGE SECTION*/
 .reason {
-    border: 1px solid #EEEEEE;
-    border-radius: 10px;
-    padding: 1rem;
-    height: 100%;
+  border: 1px solid #eeeeee;
+  border-radius: 10px;
+  padding: 1rem;
+  height: 100%;
 }
 
 .reason-icon-background {
-    background-color: #EEEEEE;
-    width: 6.5rem;
-    height: 6.5rem;
+  background-color: #eeeeee;
+  width: 6.5rem;
+  height: 6.5rem;
 }
 
 .profile-pic-size {
-    width: 6.5rem;
-    height: 6.5rem;
+  width: 6.5rem;
+  height: 6.5rem;
 }
 
 .reason-title {
-    border-bottom: 2px solid #E80F88;
-    display: inline;
-    padding-bottom: 3px;
+  border-bottom: 2px solid #e80f88;
+  display: inline;
+  padding-bottom: 3px;
 }
 
 .reason-content {
-    padding-top: 0.5rem;
+  padding-top: 0.5rem;
 }
 
 @media only screen and (max-width: 992px) {
-    .landing-info-wrapper {
-        flex-direction: column;
-    }
-    .landing-info {
-        flex-basis: 0;
-        flex-grow: 1;
-        width: 100%;
-    }
-    .d-none-992-down {
-        display:block;
-    }
-
-    .d-none-992-up {
-        display:none;
-    }
+  .landing-info-wrapper {
+    flex-direction: column;
+  }
+  .landing-info {
+    flex-basis: 0;
+    flex-grow: 1;
+    width: 100%;
+  }
+  .d-none-992-down {
+    display: block;
   }
 
-  @media only screen and (max-width: 992px) {
-    .nezobrazovat-na-mobilu-landing {
-      display: none;
-    }
+  .d-none-992-up {
+    display: none;
   }
+}
 
-  @media only screen and (max-width: 768px) {
-    .streak-box {
-        margin-bottom: 4rem;
-        margin-top: -4rem;
-    }
+@media only screen and (max-width: 992px) {
+  .nezobrazovat-na-mobilu-landing {
+    display: none;
   }
+}
 
-  @media only screen and (max-width: 576px) {
-    .text-center-on-mobile {
-        text-align: center;
-    }
-    .jumbotron-heading {
-        font-size: 6vh;
-    }
-    .streak-card {
-        width: 200px;
-      }
+@media only screen and (max-width: 768px) {
+  .streak-box {
+    margin-bottom: 4rem;
+    margin-top: -4rem;
   }
+}
+
+@media only screen and (max-width: 576px) {
+  .text-center-on-mobile {
+    text-align: center;
+  }
+  .jumbotron-heading {
+    font-size: 6vh;
+  }
+  .streak-card {
+    width: 200px;
+  }
+}
 
 /* ANIMATIONS */
 @keyframes slideIn {
-    from {
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .animate {
-    animation: slideIn 1s ease forwards;
+  animation: slideIn 1s ease forwards;
 }
