--- a/views/index.ejs
+++ b/views/index.ejs
@@ -360,8 +360,8 @@
                         class="d-flex justify-content-evenly align-items-center"
                       >
                         <h5 class="text-center mb-0">
-                          Právě jsme spustili také <b>mobilní aplikaci</b>
-                          <b class="color-primary">InLege</b>!
+                          Vyzkoušej také <b>mobilní aplikaci</b>
+                          <b class="color-primary">Edookio</b>!
                         </h5>
                         <div
                           class="d-flex justify-content-evenly align-items-center"
@@ -389,44 +389,12 @@
               <% } %>
 
               <div class="row">
-                <% categories.forEach(cat => { %>
-                <div class="col-lg-3 col-md-4 col-6 mb-4">
-                  <a href="/category/<%= cat._id %>" class="landing-link">
-                    <div class="card">
-                      <div class="d-flex justify-content-center">
-                        <div
-                          class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center"
-                        >
-                          <img
-                            src="/img/<%= cat.icon %>"
-                            class="img-fit"
-                            alt=""
-                          />
-                        </div>
-                      </div>
-                      <div
-                        class="card-body cat-text d-flex flex-column justify-content-between"
-                      >
-                        <h5 class="card-title"><%= cat.text %></h5>
-                        <div>
-                          <p class="text-muted">
-                            <%= cat.numOfCards %> <%= texts.landingPage.cards %>
-                            <br />
-                            <span class="text-small"
-                              ><%= cat.numOfQuestions %> otázek</span
-                            >
-                          </p>
-                          <a
-                            href="/category/<%= cat._id %>"
-                            class="btn btn-sm btn-danger"
-                            ><%= texts.landingPage.study %></a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </a>
+                <div class="col-12">
+                  <p>
+                    Zde bude popis flow nahraj - generuj - studuj s grafikou
+                  </p>
+                  <p>A button na demo balíček kartiček a otázek</p>
                 </div>
-                <% }) %>
               </div>
             </div>
           </div>
